# RAG-test-theory

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
.agents/plugins/: marketplace.json
RAG/: SKILL.md  index.md  log.md  references.bib  template.md  vocabulary.md
RAG-Design/: design.md  retrieval_agent_workflow.md
RAG/reference/: physh_cache.json
plugins/darw-rag/: README.md
scripts/rag/: apply_edges.py  apply_vocabulary.py  bib_parser.py  bib_update.py  bootstrap_rag.py  build_physh_wiki.py  build_source_pages.py  build_vocabulary_wiki.py  check_staleness.py  chunker.py  cli_encoding.py  common.py  context_pack.py  dedup.py  (+44 more)
tests/: conftest.py  temp_file_bytes.txt  test_apply_edges.py  test_apply_vocabulary.py  test_bib_parser.py  test_bib_update.py  test_bootstrap_rag.py  test_build_vocabulary_wiki.py  test_chunker.py  test_context_pack.py  test_dedup.py  test_delete_entry.py  test_embedding_router.py  test_evidence_ingest.py  test_export.py  test_external_search.py  test_import_pipeline.py  test_merge_rag_update.py  test_parsers_routing.py  test_pdf_downloader.py  test_pdf_validator.py  test_physh_mapper.py  test_plugin_smoke.py  test_qdrant_store.py  test_query_hybrid.py  test_query_structured.py  test_rag_lint.py  test_rag_maintain.py  test_rag_workflow.py  test_rdf_parser.py  test_remove_evidence.py  test_resolve_source.py  test_search_add.py  test_search_evidence.py  test_suggest_vocabulary.py  test_summarize_evidence.py  test_summarize_topic.py  test_sync_from_notes_incremental.py  test_sync_pdf_dry_run.py  test_trace_claim.py  (+4 more)
(+75 files in other folders)
